# luminiferous

./: .gitignore  Cargo.toml  README.md  cargo.toml  rust-toolchain
aether/: Cargo.toml
luminiferous/: Cargo.toml  build.rs
luminiferous/shaders/: Cargo.toml
luminiferous/shaders/src/: lib.rs  shader.rs
luminiferous/shared/: Cargo.toml
luminiferous/shared/src/: integrators.rs  lib.rs  math.rs
luminiferous/shared/src/integrators/: simple.rs
luminiferous/shared/src/shapes/: sphere.rs
luminiferous/src/: containers.rs  context.rs  core.rs  lib.rs  loaders.rs  maths.rs  render.rs  result.rs  stats.rs
luminiferous/src/containers/: vector2d.rs
luminiferous/src/context/: cpu_context.rs  gpu_context.rs
luminiferous/src/core/: array2d.rs  display_reporter.rs  log.rs  ops.rs  progress.rs  tev.rs
luminiferous/src/loaders/: assimp_loader.rs  pbrt_loader.rs
luminiferous/src/maths/: bounds.rs  color.rs  frame.rs  linear_types.rs  ray.rs  transform.rs  warp.rs
luminiferous/src/render/: aggregates.rs  bsdfs.rs  cameras.rs  emitters.rs  film.rs  integrators.rs  lights.rs  materials.rs  media.rs  phase_functions.rs  primitive.rs  rfilters.rs  samplers.rs  scene.rs  sensors.rs  shapes.rs  spectra.rs  textures.rs
luminiferous/src/render/aggregates/: bvh.rs  vector.rs
luminiferous/src/render/bsdfs/: conductor.rs  dielectric.rs  lambertian.rs  measured.rs  mirror.rs  null.rs  plastic.rs  util.rs
luminiferous/src/render/cameras/: perspective.rs  projective.rs
luminiferous/src/render/emitters/: environment.rs  point.rs
luminiferous/tests/: cpu_gpu_consistent.rs
(+36 files in other folders)
