[package]
name = "luminiferous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
bitflags = "2.3.2"
enum_dispatch = "0.3.11"
exr = "1.6.3"
glam = "0.24.0"
image = "0.24.6"
indicatif = "0.17.5"
oorandom = "11.1.3"
ply-rs = "0.1.3"
rayon = "1.7.0"
russimp = { version = "1.0.3", features = ["static-link"] }
tev_client = "0.5.2"
tobj = "4.0.0"
